...

      Alert.alert(
        "Password Reset",
        "A password reset link has been sent to your email.",
        [
          {
            text: "OK",
            onPress: () => navigation.goBack(),
          },
        ]
      );
    } catch (error) {
      if (error.code === "auth/user-not-found") {
...
